[package]
name = "vk-sync"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
repository = "https://github.com/gwihlidal/vk-sync-rs"

[dependencies]

[features]
default = ["ash_bind"]
ash_bind = ["ash"]

[dependencies.ash]
version = "0.24.4"
optional = true